@@ -77,6 +77,33 @@
 			<target>1.8</target>
 			</configuration>
 		</plugin>
+		<!-- 解决maven test命令时console出现中文乱码乱码 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
+				<configuration>
+					<!-- forkMode 可设置值有 “never”， “once”， “always” 和 “pertest” -->
+					<!-- pretest： 每一个测试创建一个新进程，为每个测试创建新的JVM是单独测试的最彻底方式，但也是最慢的，不适合hudson上持续回归
+						 once：在一个进程中进行所有测试。once为默认设置，在Hudson上持续回归时建议使用默认设置。
+						 always：在一个进程中并行的运行脚本，Junit4.7以上版本才可以使用，surefire的版本要在2.6以上提供这个功能，其中 threadCount：执行时，指定可分配的线程数量。只和参数parallel配合使用有效。默认：5 -->
+					<forkMode>always</forkMode>
+					<parallel>methods</parallel>
+					<threadCount>4</threadCount>
+					<!-- <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m</argLine> -->
+ 					<argLine>-Dfile.encoding=UTF-8</argLine> 
+ 					<excludes>  
+	                  <exclude>**/TestAll.java</exclude>  
+	                </excludes> 
+ 					<!-- cobertura统计单元测试覆盖率 -->
+					<!-- <systemProperties>
+						<property>
+							<name>net.sourceforge.cobertura.datafile</name>
+							<value>target/cobertura/cobertura.ser</value>
+						</property>
+					</systemProperties> -->
+				</configuration>
+			</plugin>
     </plugins>
     <resources>
 		<resource>
